# huffman

./: .gitignore  Cargo.toml  benchmark.sh  test.raw
benches/: benchmarks.rs
examples/: decode.rs  finderrors.rs  fixerrors.rs  generate_testfiles.rs  pack.rs  sorting.rs  vault.rs  writer.rs
src/: decode.rs  encode.rs  header.rs  huffman.rs  lib.rs  main.rs  model.rs  pack.rs  stats.rs  vault.rs
src/huffman/: encode.rs  header.rs  mod.rs
src/huffman/decode/: iterator.rs  mod.rs  one.rs  reader.rs  symboltable.rs  vault.rs  writer.rs
src/huffman/encode/: error.rs  mod.rs
