[package]
name = "rscompress-huffman"
version = "0.1.0"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
mimalloc = {version = "0.1.17", default-features = false}

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false
